@@ -10,7 +10,7 @@ When you go online:
 Then when you go offline:
 ![Demo3](https://raw.githubusercontent.com/janumeke/assets/master/TwitchStreamInfoPage/demo3.png)
 
-Note that this refreshes itself every 30 seconds, so the info may be as late as 30 seconds ago.
+Note that this refreshes itself every 30 seconds, so the info may be as late as 30 seconds (plus latency) ago.
 
 ### Usage:
 <pre>StreamInfo.html?clientId=&lt;Your Client ID&gt;&username=&lt;Target Channel's Username&gt;&dark=true</pre>
@@ -18,3 +18,7 @@ Last argument is optional. Default is light theme.
 
 So for example, if you put the file under D:\\, you put the following in OBS &gt; View &gt; Docks &gt; Custom Browser Docks &gt; URL:
 <pre>D:\StreamInfo.html?clientId=...&username=...</pre>
+
+## How To Localize
+1. Translate the strings in line 66-76.
+2. Use the appropriate fonts in line 11.
