@@ -58,7 +58,27 @@
         </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
         <script>
+            //Localized strings
+            const LOCALSTRINGS = {
+                LABEL: {
+                    VIEWER_COUNT: "Watching Now",
+                    UPTIME: "Stream Uptime",
+                    CATEGORY: "Category:"
+                },
+                ERROR: {
+                    ARGUMENTS_MISSING: "Missing arguments!",
+                    CLIENTID: "Probably clientId is wrong."
+                },
+                TOOLTIP: {
+                    RELOAD: "You need to manually reload this component.",
+                    NOT_LIVE: "Not Live"
+                }
+            };
+        </script>
+        <script>
+            //Helper functions
             function FormatNumber(num){
                 return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,');
             }
@@ -72,8 +92,9 @@
                 };
             }
         </script>
-        <!-- Controller -->
+<!-- Controller -->
         <script>
+            //Handle url parameters
             var urlParams = new URLSearchParams(window.location.search);
             const CLIENT_ID = urlParams.get('clientId');
             const USERNAME = urlParams.get('username');
@@ -83,14 +104,16 @@
                 $(':root').css('--link-color', 'rgb(191, 148, 255)');
             }
 
-            $(document).ready(LoadInfo);
-            var currentGameId;
+            //Replace strings in the view
+            $(document).ready(function(){
+                $('#label_viewerCount').attr('title', LOCALSTRINGS.LABEL.VIEWER_COUNT);
+                $('#label_streamUptime').attr('title', LOCALSTRINGS.LABEL.UPTIME);
+                $('#label_category').html(LOCALSTRINGS.LABEL.CATEGORY);
+            });
+            
+            //Retrieve stream info
+            var currentGameId = ''; //Empty string means no game
             function LoadInfo(){
-                if(!CLIENT_ID || !USERNAME){
-                    $('#title').html('Missing arguments!');
-                    return;
-                }
-
                 $.ajax({
                     url: 'https://api.twitch.tv/helix/streams?user_login=' + USERNAME,
                     headers: {
@@ -98,14 +121,12 @@
                     }
                 })
                 .done((res) => {
-                    setTimeout(LoadInfo, 30000);
                     if(res.data.length > 0){
                         $('#title').html(res.data[0].title);
                         $('#viewer_count').html(FormatNumber(res.data[0].viewer_count));
                         var uptime = ConvertMilliseconds(Date.now() - new Date(res.data[0].started_at));
                         $('#uptime').html(uptime.hour + ':' + uptime.min.toString().padStart(2, '0'));
-                        if(currentGameId != res.data[0].game_id){
-                            currentGameId = res.data[0].game_id;
+                        if(res.data[0].game_id != currentGameId){
                             $.ajax({
                                 url: 'https://api.twitch.tv/helix/games?id=' + res.data[0].game_id,
                                 headers: {
@@ -114,6 +135,7 @@
                             })
                             .done((res) => {
                                 if(res.data.length > 0){
+                                    currentGameId = res.data[0].id;
                                     $('#game_name').html(res.data[0].name);
                                     var boxArtUrl = res.data[0].box_art_url;
                                     boxArtUrl = boxArtUrl.replace('{width}', '85');
@@ -121,6 +143,7 @@
                                     $('#game_box_art').attr('src', boxArtUrl);
                                 }
                                 else{
+                                    currentGameId = '';
                                     $('#game_name').html('');
                                     $('#game_box_art').attr('src', 'https://static-cdn.jtvnw.net/ttv-static/404_boxart.jpg');
                                 }
@@ -128,21 +151,33 @@
                         }
                     }
                     else{
-                        $('#title').html('Not Live');
+                        $('#title').html(LOCALSTRINGS.TOOLTIP.NOT_LIVE);
                         $('#viewer_count').html('');
                     }
                 })
                 .fail((xhr) => {
                     $('#title').html(xhr.status + ' ' + xhr.responseJSON.error);
                     if(xhr.status == 401){
-                        $('#title').append(' (Probably clientId is wrong.)');
+                        $('#title').append(` (${LOCALSTRINGS.ERROR.CLIENTID})`);
                     }
-                    $('#game_name').html('You need to manually reload this component.');
+                    $('#game_name').html(LOCALSTRINGS.TOOLTIP.RELOAD);
+                    clearInterval(loadInfoIntervalId);
                 });
             }
+            var loadInfoIntervalId;
+            $(document).ready(function(){
+                if(!CLIENT_ID || !USERNAME){
+                    $('#title').html(LOCALSTRINGS.ERROR.ARGUMENTS_MISSING);
+                }
+                else{
+                    LoadInfo();
+                    loadInfoIntervalId = setInterval(LoadInfo, 30000);
+                    //Since ajax call is asynchronous, 'clearInterval' inside the first 'LoadInfo' happens after 'setInterval'.
+                }
+            });
         </script>
     </head>
-    <!-- View -->
+<!-- View -->
     <body>
         <div class="flex">
             <div class="mg-r-10">
@@ -152,7 +187,7 @@
                 <div class="flex">
                     <div id="title" class="flex-grow-1 font-title"></div>
                     <div class="flex-shrink-0 stat mg-t-6 flex">
-                        <div class="mg-r-10 flex color-live" title="Watching Now">
+                        <div id="label_viewerCount" class="mg-r-10 flex color-live">
                             <svg class="icon__svg" height="1em" version="1.1" viewBox="0 0 20 20" x="0px" y="0px">
                                 <g>
                                     <path fill-rule="evenodd" d="M5 7a5 5 0 116.192 4.857A2 2 0 0013 13h1a3 3 0 013 3v2h-2v-2a1 1 0 00-1-1h-1a3.99 3.99 0 01-3-1.354A3.99 3.99 0 017 15H6a1 1 0 00-1 1v2H3v-2a3 3 0 013-3h1a2 2 0 001.808-1.143A5.002 5.002 0 015 7zm5 3a3 3 0 110-6 3 3 0 010 6z" clip-rule="evenodd"></path>
@@ -160,15 +195,15 @@
                             </svg>
                             <div id="viewer_count" class="mg-l-5"></div>
                         </div>
-                        <div class="flex" title="Stream Uptime">
+                        <div id="label_streamUptime" class="flex">
                             <i class="far fa-clock"></i>
                             <div id="uptime" class="mg-l-5"></div>
                         </div>
                     </div>
                 </div>
-                <div class="mg-t-5">
-                    <span class="mg-r-5">Category:</span>
-                    <span id="game_name" class="color-link"></span>
+                <div class="mg-t-5 flex">
+                    <div id="label_category" class="flex-shrink-0 mg-r-5"></div>
+                    <div id="game_name" class="color-link"></div>
                 </div>
             </div>
         </div>
