@@ -1,3 +1,7 @@
- 2019-10-9    782ab46
+2020-1-4
+    Changed recursive 'setTimeout' to 'setInterval' to prevent long-term issues.
+    All UI strings are put together to facilitate localization.
+    Other minor fixes.
+2019-10-9
     Checks the game is different before sending a second API call.
     Fixed a bug when the game is empty or unknown.
